test/message/events_unhandled_error_common_trace.out
*/test/message/events_unhandled_error_common_trace.js:7
    return new Error('foo:bar');
           ^

Error: foo:bar
    at bar (*events_unhandled_error_common_trace.js:*:*)
    at foo (*events_unhandled_error_common_trace.js:*:*)
    at Object.<anonymous> (*events_unhandled_error_common_trace.js:*:*)
    at Module._compile (internal/modules/cjs/loader.js:*:*)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:*:*)
    at Module.load (internal/modules/cjs/loader.js:*:*)
    at Function.Module._load (internal/modules/cjs/loader.js:*:*)
    at ModuleWrap.<anonymous> (internal/modules/esm/translators.js:*:*)
    at ModuleJob.run (internal/modules/esm/module_job.js:*:*)
    at async Loader.import (internal/modules/esm/loader.js:*:*)
Emitted 'error' event at:
    at quux (*events_unhandled_error_common_trace.js:*:*)
    at Object.<anonymous> (*events_unhandled_error_common_trace.js:*:*)
    at Module._compile (internal/modules/cjs/loader.js:*:*)
    [... lines matching original stack trace ...]
    at async Loader.import (internal/modules/esm/loader.js:*:*)
